Simplify: replace 'Strings.nullToEmpty(value).isEmpty()' with 'Strings.isNullOrEmpty(value)' (#11037)